[gd_scene load_steps=18 format=3 uid="uid://xnc2lt08cjp5"]

[ext_resource type="Script" path="res://MiniGames/TiralaBirra.gd" id="1_ucgvh"]
[ext_resource type="Texture2D" uid="uid://81vy0rv8hw6e" path="res://Media/imatges/BarBackground/barfirall.png" id="2_72kyw"]
[ext_resource type="PackedScene" uid="uid://b6ch3vlds7yv1" path="res://UI/healthbar/HealthBar.tscn" id="3_6pth1"]
[ext_resource type="PackedScene" uid="uid://bxwvom72yex22" path="res://UI/Hud.tscn" id="8_dtchr"]
[ext_resource type="PackedScene" uid="uid://rn04uhwsm28s" path="res://UI/RetryGame.tscn" id="9_csiih"]
[ext_resource type="Texture2D" uid="uid://c5r8uihprhlxx" path="res://Media/imatges/squareAlls/abaixdreta.png" id="10_bwexg"]
[ext_resource type="Texture2D" uid="uid://baia8sxp0simw" path="res://Media/imatges/squareAlls/abaixesquerra.png" id="11_4fstl"]
[ext_resource type="Texture2D" uid="uid://cot581o5xqtxp" path="res://Media/imatges/squareAlls/adaltdreta.png" id="12_h5woe"]
[ext_resource type="Texture2D" uid="uid://dlw46ubgjy63l" path="res://Media/imatges/squareAlls/adaltesquerra.png" id="13_xi3vw"]
[ext_resource type="Texture2D" uid="uid://p4txl2j552ao" path="res://Media/imatges/squareAlls/horitzontal.png" id="14_28e28"]
[ext_resource type="FontFile" uid="uid://bgqt1vjshdk4n" path="res://Media/Fonts/zero_cool/ZeroCool.ttf" id="15_0rhlu"]
[ext_resource type="PackedScene" uid="uid://blhp643l02dt0" path="res://Actors/Barman/barman.tscn" id="15_t5t43"]
[ext_resource type="PackedScene" uid="uid://dwdkn0aj7euh1" path="res://Actors/clientdosBarFiraAll/BaldBarFiraAll.tscn" id="16_28rhn"]
[ext_resource type="PackedScene" uid="uid://de8eolu0aph1o" path="res://Actors/clientBarFiraAll/AviBarFiraAll.tscn" id="16_p30b7"]
[ext_resource type="PackedScene" uid="uid://7y1yg3ncpn4m" path="res://Actors/Birra/Birra.tscn" id="18_mq4rg"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_2rys5"]
size = Vector2(268.903, 20)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_qyluy"]
size = Vector2(147, 20)

[node name="TiralaBirra" type="Node2D"]
script = ExtResource("1_ucgvh")
metadata/_edit_horizontal_guides_ = [40.0, 2.0]

[node name="TextureRect" type="TextureRect" parent="."]
offset_right = 320.0
offset_bottom = 240.0
texture = ExtResource("2_72kyw")

[node name="TimerP2" type="Timer" parent="."]
wait_time = 0.075
autostart = true

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(240, 177)
scale = Vector2(0.579368, -1.30493)
shape = SubResource("RectangleShape2D_2rys5")

[node name="Area2D2" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D2"]
position = Vector2(74.5, 173)
shape = SubResource("RectangleShape2D_qyluy")

[node name="BirrasP2" parent="." instance=ExtResource("18_mq4rg")]
position = Vector2(189, 141)

[node name="BirrasP1" parent="." instance=ExtResource("18_mq4rg")]
position = Vector2(130, 141)

[node name="Barman" parent="." instance=ExtResource("15_t5t43")]
position = Vector2(159, 124)
scale = Vector2(0.5, 0.5)

[node name="AviBarFiraAll" parent="." instance=ExtResource("16_p30b7")]
position = Vector2(290, 170)

[node name="BaldBarFiraAll" parent="." instance=ExtResource("16_28rhn")]
position = Vector2(25, 170)

[node name="HealthBarP2" parent="." instance=ExtResource("3_6pth1")]
offset_left = 155.0
offset_top = 224.0
offset_right = 233.0
offset_bottom = 234.0

[node name="HealthBarP1" parent="." instance=ExtResource("3_6pth1")]
layout_direction = 1
offset_left = 70.0
offset_top = 223.0
offset_right = 148.0
offset_bottom = 233.0

[node name="TimerP1" type="Timer" parent="."]
wait_time = 0.075
autostart = true

[node name="textProgressP1" type="RichTextLabel" parent="."]
offset_left = 100.0
offset_top = 222.0
offset_right = 136.0
offset_bottom = 236.0
theme_override_colors/default_color = Color(0.847059, 0.768627, 0.180392, 1)
theme_override_font_sizes/normal_font_size = 8

[node name="textProgressP2" type="RichTextLabel" parent="."]
offset_left = 184.0
offset_top = 223.0
offset_right = 220.0
offset_bottom = 237.0
theme_override_colors/default_color = Color(0.847059, 0.768627, 0.180392, 1)
theme_override_font_sizes/normal_font_size = 8

[node name="Hud" parent="." instance=ExtResource("8_dtchr")]
offset = Vector2(40, -40)
transform = Transform2D(1, 0, 0, 1, 40, -40)

[node name="RetryGame" parent="." instance=ExtResource("9_csiih")]

[node name="Participant1Punts" type="CanvasLayer" parent="."]

[node name="Abaixdreta" type="Sprite2D" parent="Participant1Punts"]
position = Vector2(116, 30)
texture = ExtResource("10_bwexg")

[node name="Abaixesquerra" type="Sprite2D" parent="Participant1Punts"]
position = Vector2(50, 30)
texture = ExtResource("11_4fstl")

[node name="Adaltdreta" type="Sprite2D" parent="Participant1Punts"]
position = Vector2(116, 13)
texture = ExtResource("12_h5woe")

[node name="Adaltesquerra" type="Sprite2D" parent="Participant1Punts"]
position = Vector2(50, 13)
texture = ExtResource("13_xi3vw")

[node name="Horitzontal" type="Sprite2D" parent="Participant1Punts"]
position = Vector2(88, 13)
texture = ExtResource("14_28e28")

[node name="Horitzontal2" type="Sprite2D" parent="Participant1Punts"]
position = Vector2(98, 13)
texture = ExtResource("14_28e28")

[node name="Horitzontal3" type="Sprite2D" parent="Participant1Punts"]
position = Vector2(71, 30)
texture = ExtResource("14_28e28")
flip_v = true

[node name="Horitzontal4" type="Sprite2D" parent="Participant1Punts"]
position = Vector2(99, 30)
texture = ExtResource("14_28e28")
flip_v = true

[node name="Horitzontal5" type="Sprite2D" parent="Participant1Punts"]
position = Vector2(88, 30)
texture = ExtResource("14_28e28")
flip_v = true

[node name="Horitzontal6" type="Sprite2D" parent="Participant1Punts"]
position = Vector2(69, 13)
texture = ExtResource("14_28e28")

[node name="Horitzontal7" type="Sprite2D" parent="Participant1Punts"]
position = Vector2(80, 30)
texture = ExtResource("14_28e28")
flip_v = true

[node name="Label" type="Label" parent="Participant1Punts"]
offset_left = 49.0
offset_top = 10.0
offset_right = 118.0
offset_bottom = 20.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("15_0rhlu")
theme_override_font_sizes/font_size = 8
text = "Punts Jugador 1"

[node name="Punts" type="Label" parent="Participant1Punts"]
offset_left = 64.0
offset_top = 20.0
offset_right = 113.0
offset_bottom = 32.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("15_0rhlu")
theme_override_font_sizes/font_size = 8

[node name="Participant2Punts2" type="CanvasLayer" parent="."]

[node name="Abaixdreta" type="Sprite2D" parent="Participant2Punts2"]
position = Vector2(267, 30)
texture = ExtResource("10_bwexg")

[node name="Abaixesquerra" type="Sprite2D" parent="Participant2Punts2"]
position = Vector2(201, 30)
texture = ExtResource("11_4fstl")

[node name="Adaltdreta" type="Sprite2D" parent="Participant2Punts2"]
position = Vector2(267, 13)
texture = ExtResource("12_h5woe")

[node name="Adaltesquerra" type="Sprite2D" parent="Participant2Punts2"]
position = Vector2(201, 13)
texture = ExtResource("13_xi3vw")

[node name="Horitzontal" type="Sprite2D" parent="Participant2Punts2"]
position = Vector2(239, 13)
texture = ExtResource("14_28e28")

[node name="Horitzontal2" type="Sprite2D" parent="Participant2Punts2"]
position = Vector2(249, 13)
texture = ExtResource("14_28e28")

[node name="Horitzontal3" type="Sprite2D" parent="Participant2Punts2"]
position = Vector2(222, 30)
texture = ExtResource("14_28e28")
flip_v = true

[node name="Horitzontal4" type="Sprite2D" parent="Participant2Punts2"]
position = Vector2(250, 30)
texture = ExtResource("14_28e28")
flip_v = true

[node name="Horitzontal5" type="Sprite2D" parent="Participant2Punts2"]
position = Vector2(239, 30)
texture = ExtResource("14_28e28")
flip_v = true

[node name="Horitzontal6" type="Sprite2D" parent="Participant2Punts2"]
position = Vector2(220, 13)
texture = ExtResource("14_28e28")

[node name="Horitzontal7" type="Sprite2D" parent="Participant2Punts2"]
position = Vector2(231, 30)
texture = ExtResource("14_28e28")
flip_v = true

[node name="Label" type="Label" parent="Participant2Punts2"]
offset_left = 200.0
offset_top = 10.0
offset_right = 269.0
offset_bottom = 20.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("15_0rhlu")
theme_override_font_sizes/font_size = 8
text = "Punts Jugador 2"
metadata/_edit_use_anchors_ = true

[node name="Punts" type="Label" parent="Participant2Punts2"]
offset_left = 215.0
offset_top = 20.0
offset_right = 264.0
offset_bottom = 32.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("15_0rhlu")
theme_override_font_sizes/font_size = 8
metadata/_edit_use_anchors_ = true

[node name="TimerGotoRecords" type="Timer" parent="."]
wait_time = 2.0

[connection signal="timeout" from="TimerP2" to="." method="_on_timer_timeout"]
[connection signal="timeout" from="TimerP1" to="." method="_on_timer_p_1_timeout"]
[connection signal="timeout" from="TimerGotoRecords" to="." method="_on_timer_goto_records_timeout"]
